--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             </div>
                             <div class="hover-effect-video">
                                 <video autoplay loop muted class = "video img_portfolio" src="images/cream.mp4"></video>
-                                <div class="button_vid"><a target = "_blank" href="https://github.com/AnneBirdie/congratulate">посмотреть код</a><br><a target = "_blank" href="http://repetixg.beget.tech/">посмотреть сайт</a></div>
+                                <div class="button_vid"><a target = "_blank" href="https://github.com/AnneBirdie/cream">посмотреть код</a><br><a target = "_blank" href="http://repetixg.beget.tech/">посмотреть сайт</a></div>
                             </div>
                        </div>
                     </div>
