--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             </div>
                             <div class="hover-effect-video">
                                 <video autoplay loop muted class = "video img_portfolio" src="images/congr.mp4"></video>
-                                <div class="button_vid"><a target = "_blank" href="https://annebirdie.github.io/congratulate/">посмотреть код</a><br><a target = "_blank" href="https://annebirdie.github.io/cream/">посмотреть сайт</a></div>
+                                <div class="button_vid"><a target = "_blank" href="https://github.com/AnneBirdie/congratulate">посмотреть код</a><br><a target = "_blank" href="https://annebirdie.github.io/congratulate/">посмотреть сайт</a></div>
                             </div>
                             <div class="hover-effect-video">
                                 <video autoplay loop muted class = "video img_portfolio" src="images/cream.mp4"></video>
